<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>

    <groupId>com.rymcu</groupId>
    <artifactId>mortise</artifactId>
    <version>0.0.1</version>
    <packaging>pom</packaging>
    <name>mortise</name>
    <description>Mortise - Multi-module Monolithic Application</description>

    <modules>
        <module>mortise-common</module>
        <module>mortise-core</module>
        <module>mortise-log</module>
        <module>mortise-cache</module>
        <module>mortise-notification</module>
        <module>mortise-auth</module>
        <module>mortise-wechat</module>
        <module>mortise-web</module>
        <module>mortise-system</module>
        <module>mortise-monitor</module>
        <module>mortise-app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        
        <!-- 模块版本 -->
        <mortise.version>0.0.1</mortise.version>
        
        <!-- 第三方依赖版本 -->
        <shiro.version>2.0.2</shiro.version>
        <jjwt.version>0.12.5</jjwt.version>
        <mockito.version>5.11.0</mockito.version>
        <commons-lang3.version>3.18.0</commons-lang3.version>
        <commons-io.version>2.18.0</commons-io.version>
        <commons-codec.version>1.16.1</commons-codec.version>
        <commons-text.version>1.13.1</commons-text.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <ulid-creator.version>5.2.3</ulid-creator.version>
        <jasypt.version>3.0.5</jasypt.version>
        <mybatis-flex.version>1.11.0</mybatis-flex.version>
        <jedis-lock.version>1.0.0</jedis-lock.version>
        <springdoc.version>2.8.13</springdoc.version>
        <resilience4j.version>2.2.0</resilience4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Mortise 模块依赖 -->
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-common</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-core</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-log</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-cache</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-notification</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-auth</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-web</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-system</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-monitor</artifactId>
                <version>${mortise.version}</version>
            </dependency>
            <dependency>
                <groupId>com.rymcu</groupId>
                <artifactId>mortise-wechat</artifactId>
                <version>${mortise.version}</version>
            </dependency>

            <!-- 第三方依赖版本管理 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.f4b6a3</groupId>
                <artifactId>ulid-creator</artifactId>
                <version>${ulid-creator.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ulisesbocchio</groupId>
                <artifactId>jasypt-spring-boot-starter</artifactId>
                <version>${jasypt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mybatis-flex</groupId>
                <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
                <version>${mybatis-flex.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.jedis-lock</groupId>
                <artifactId>jedis-lock</artifactId>
                <version>${jedis-lock.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-spring-boot3</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-ratelimiter</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.resilience4j</groupId>
                <artifactId>resilience4j-micrometer</artifactId>
                <version>${resilience4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <release>21</release>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>public</id>
            <name>huawei cloud maven</name>
            <url>https://mirrors.huaweicloud.com/repository/maven/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>public</id>
            <name>huawei cloud</name>
            <url>https://repo.huaweicloud.com/repository/maven/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <profileActive>dev</profileActive>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>prod</id>
            <properties>
                <profileActive>prod</profileActive>
            </properties>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
    </profiles>
</project>
